# pico_pi_esl_video

./: .gitignore  CMakeLists.txt  main.c  readme.md  wifi_config .cmake.example
image_conversion/: convert_image.py  eink_personalized_price_base.pbm  eink_personalized_sale.pbm  esl_base_y_black.pbm  esl_personalized_y_black.pbm  generic_eink_example.pbm  generic_eink_example_white.pbm  generic_eink_example_y.pbm  generic_eink_example_y_black.pbm  generic_eink_example_y_white.pbm  little_guy_full_screen.pbm  little_guy_full_width.pbm
lib/GUI/: GUI_Paint.c  GUI_Paint.h
lib/pico-ups/: CMakeLists.txt  Pico_UPS.c  Pico_UPS.h
utils/: CMakeLists.txt  DrawImageData.c  DrawImageData.h  http_request.c  http_request.h  init_wifi.c  init_wifi.h  lwipopts.h  ntp_client.c  ntp_client.h  utils.c  utils.h
